added database and socket file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
             };
-
+            // Server.activateBinding
             Server.callInto( Server.userModels, 'Controller/Samples->getUserByName', ['Marlon'], function( $return ) {
                 console.log( Server.userModels )
             } );
