edited 2-way binding in app.model

--- a/blog.html
+++ b/blog.html
@@ -64,8 +64,8 @@
                     content : $('input')[1].value
                 } );
                 var viewElem = newBeitrag.get('viewElem');
-
-                console.log(viewElem)
+//                b =  newBeitrag
+//                console.log(viewElem)
                 document
                     .getElementById('beitrag-wrapper')
                     .appendChild( viewElem )
