edited model and database structure

--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
 
             };
             // Server.activateBinding
-            Server.callInto( Server.userModels, 'Controller/Samples->getUserByName', ['Marlon'], function( $return ) {
+            Server.bind( UserModels, 'Controller/Samples->getUserByName', ['Marlon'], function( $return ) {
 //            Server.callInto( Server.userModels, 'Module/Samples->getUserByName', ['Marlon'], function( $return ) {
                 console.log( Server.userModels )
             } );
+
+
+
+
 
         </script>
     </body>
